[package]
name = "dsn"
version = "0.2.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "DSN (Data Source Name) parser"
documentation = "https://docs.rs/dsn/latest/dsn/"
homepage = "https://docs.rs/dsn/latest/dsn/"
repository = "https://github.com/nbari/dsn"
readme = "README.md"
keywords = ["database", "dsn", "parser"]
categories = ["parsing", "database"]
license-file = "LICENSE"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/dsn", branch = "master" }

[dependencies]
percent-encoding = "2.1.0"
