[package]
name = "dsn"
version = "1.1.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "DSN (Data Source Name) parser"
documentation = "https://docs.rs/dsn/latest/dsn/"
homepage = "https://docs.rs/dsn/latest/dsn/"
repository = "https://github.com/nbari/dsn"
readme = "README.md"
keywords = ["database", "dsn", "parser"]
categories = ["parsing", "database"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
percent-encoding = "2.3.1"
